# coco-ra-test

./: .gitmodules  README.md  build.sh  ocicrypt.conf
data/: auth.json  cosign.key  cosign.pub  encryption.key  policy.json
image-pulling-tool/: .gitignore  Cargo.toml
image-pulling-tool/src/: main.rs
