[package]
name = "image-pulling-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = "0.3.5"
clap = { version = "4.0.29", features = ["derive"] }
image-rs = { git = "https://github.com/confidential-containers/image-rs" , features = ["kata-cc"] }
tokio = { version = "1.0", default-features = false, features = ["rt-multi-thread"] }